# ccswarm

./: .gitignore  .performance-baseline.json  .vibe-ticket.yaml  ADVANCED_REFACTORING_PLAN.md  AGENTS.md  AI_SESSIONS_TODO.txt  AUTO_ACCEPT_IMPLEMENTATION.md  BACKEND_STATUS_IMPLEMENTATION.md  CCSWARM_REFACTORING_TASK_BREAKDOWN.md  CHANGELOG.md  CI_FIX_NOTES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEMO_RESULT.md  DOCUMENTATION_AND_DEV_AGENTS_PROPOSAL.md  ENHANCED_UX_PROPOSAL.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  ISSUE_INTERNAL_SESSION_MANAGEMENT.md  MODULE_REORGANIZATION_PLAN.md  Makefile.standalone  README.md  REFACTORING_IMPACT_SUMMARY.md  REFACTORING_ORCHESTRATION.md  REFACTORING_PLAN.md  REFACTORING_REPORT.md  REFACTORING_RESULTS.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.7.md  SEARCH_AGENT_IMPLEMENTATION.md  SEMANTIC_DUPLICATION_REFACTORING_PLAN.md  SESSION_SUMMARY.md  STANDALONE_DEPLOYMENT.md  TODO.md  TODO.txt  UNWRAP_REMOVAL_SUMMARY.md  (+17 more)
.claude/: plan.md  (+2 more)
ai-session/: Cargo.toml  PERSISTENCE_DEMO.md  install.sh
ai-session/benches/: performance_bench.rs
ai-session/docs/: API_GUIDE.md
ai-session/examples/: interactive_test.rs  mcp_server_test.rs  message_bus_demo.rs  multi_agent.rs  pty_test.rs
ai-session/src/: lib.rs  native_portable.rs  session_cache.rs  session_persistence.rs  tmux_bridge.rs  unified_bus.rs
ai-session/src/context/: mod.rs
ai-session/src/coordination/: mod.rs
ai-session/src/core/: lifecycle.rs  mod.rs
ai-session/src/integration/: mod.rs
ai-session/src/ipc/: mod.rs
ai-session/src/mcp/: jsonrpc.rs  mod.rs  server.rs  tools.rs  transport.rs
ai-session/src/observability/: mod.rs
ai-session/src/output/: mod.rs
ai-session/tests/: comprehensive_integration_test.rs
ccswarm/: Cargo.toml
ccswarm/src/: lib.rs
ccswarm/src/agent/: claude.rs  personality.rs  phronesis.rs  pool.rs  task.rs
ccswarm/src/container/: config.rs  tests.rs
ccswarm/src/extension/: agent_extension.rs
ccswarm/src/git/: shell.rs
ccswarm/src/orchestrator/: llm_quality_judge.rs
ccswarm/src/sangha/: consensus.rs  proposal.rs
ccswarm/src/session/: coordinator.rs  persistent_session.rs
ccswarm/src/tests/: integration_tests.rs
ccswarm/src/tui/: app.rs  mod.rs
crates/ai-session/: Cargo.toml  Makefile  README.md
crates/ai-session/docs/: API_GUIDE.md  ARCHITECTURE.md  CLAUDE_CHAT_GUIDE.md  CLI_GUIDE.md  README.md  ccswarm-integration-api.md  message_bus_enhancements.md
crates/ai-session/examples/: basic_session.rs  interactive_test.rs  mcp_server_test.rs  message_bus_demo.rs  multi_agent.rs  pty_test.rs  simple_test.rs
crates/ai-session/src/: execution.rs  lib.rs  native_portable.rs  session_persistence.rs  tmux_bridge.rs  unified_bus.rs  unified_bus_refactored.rs
crates/ai-session/src/agent/: mod.rs
crates/ai-session/src/ccswarm/: mod.rs
crates/ai-session/src/context/: mod.rs
crates/ai-session/src/coordination/: mod.rs
crates/ai-session/src/core/: attention.rs  headless.rs  lifecycle.rs  mod.rs  process.rs  pty.rs  terminal.rs
crates/ai-session/src/ipc/: mod.rs
crates/ai-session/src/mcp/: jsonrpc.rs  server.rs  tools.rs  transport.rs
crates/ai-session/src/native/: mod.rs
crates/ai-session/src/observability/: mod.rs
crates/ai-session/src/output/: mod.rs
crates/ai-session/src/persistence/: mod.rs  session_store.rs
crates/ai-session/src/security/: mod.rs
crates/ai-session/tests/: comprehensive_integration_test.rs  integration_tests.rs  mockall_tests.rs
crates/ccswarm/: .gitignore  Cargo.toml  README.md  ccswarm.json  demo_proactive_workflow.rs  test-proposal.json  test_isolated_proactive.rs
crates/ccswarm/.claude/memories/: api_change_1754241974.json  api_change_1754281851.json  cross_analysis_1754281859.json  proposal_1754281859.json  refactor_long_process_data.json  test_memory_1.json
crates/ccswarm/coordination/agent-status/: error-prone-agent.json
crates/ccswarm/coordination/messages/: 1750755418880-2cb99c5c-8bc1-495d-a2c7-6af0b31d752b.json  1750755418880-81458a25-e475-46ba-ba42-9dc765c61915.json  1750755418880-9695e087-4008-4f5c-9225-6dcb2b57fb88.json  1750755418881-37bda557-4444-480d-be79-0ff96a249e09.json  1750755419021-05c8f29c-3f82-4a4d-aad7-740832437bb5.json  1750755419021-070e5787-33f2-464a-8eaf-d5de4457b6d2.json  1750755419021-0b798a76-8a0b-41ed-9bd4-54dbaabf6613.json  (+527 more)
crates/ccswarm/docs/: RESOURCE_MONITORING.md  orchestration-integration.md
crates/ccswarm/examples/: ai_session_integration_test.rs  backend_search_demo.rs  backend_status_demo.rs  conversion_demo.rs  demo_message_conversion.rs  enhanced_error_demo.rs  enhanced_error_demo.rs.disabled  error_diagram_demo.rs  orchestration_integration_demo.rs  orchestration_integration_demo.rs.disabled  orchestrator_demo.rs  resource_monitoring_demo.rs  search_agent_example.rs  search_agent_sangha_demo.rs
crates/ccswarm/examples_disabled/: ccswarm-aider-focused.json  ccswarm-frontend-only.json  ccswarm-full-stack.json  ccswarm-minimal.json  claude_code_demo.rs  container_isolation_live_demo.rs.disabled  monitoring_demo.rs  personality_demo.rs.disabled  session_persistent_demo.rs  simple_test.rs.disabled  todo_app_builder.rs  todo_test_simple.rs
crates/ccswarm/src/: error.rs  extension.rs  extension_stub.rs  hitl.rs  lib.rs  main.rs  run_id.rs  sangha.rs  security.rs  semantic.rs  tmux.rs  traits.rs
crates/ccswarm/templates/: backend_instructions.md  devops_instructions.md  framework_specialist.md  frontend_instructions.md  general_instructions.md  language_expert.md  module.rs.template  qa_instructions.md  security_specialist.md
crates/ccswarm/tests/: ai_session_bridge.rs  ai_session_integration_verification.rs  autonomous_extension_test.rs  cli_unit_tests.rs  e2e_cli_test.rs  integration_masterclaude.rs  mockall_tests.rs  quickstart_test.rs  resource_monitoring_test.rs  search_agent_integration.rs  search_agent_sangha_integration.rs  semantic_advanced_test.rs  semantic_integration_test.rs  simple_integration_test.rs  test_message_conversion.rs  workflow_integration_test.rs
(+1925 files in other folders)
