[package]
name = "ccswarm"
version = "0.3.1"
edition = "2021"
authors = ["nwiizo"]
description = "AI-powered multi-agent orchestration system with session management"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nwiizo/ccswarm"
homepage = "https://github.com/nwiizo/ccswarm"
keywords = ["ai", "claude", "agents", "orchestration", "automation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system
walkdir = "2.5"

# Regular expressions
regex = "1.10"


# Process management
nix = { version = "0.29", features = ["process"] }

# Configuration
config = "0.14"

# Async channels
async-channel = "2.3"

# State management
dashmap = "6.1"

# TUI
ratatui = "0.29"
crossterm = "0.27"
tokio-util = "0.7"

# HTTP client for API providers
reqwest = { version = "0.11", features = ["json"] }

# Async traits
async-trait = "0.1"

# Docker integration (optional for container feature)
bollard = { version = "0.16", optional = true }
futures-util = { version = "0.3", optional = true }
tar = { version = "0.4", optional = true }

# URL encoding
urlencoding = { version = "2.1", optional = true }

# Additional utilities
colored = "2.0"
rand = "0.8"

[dev-dependencies]
# Testing
mockall = "0.13"
tempfile = "3.12"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true

[[example]]
name = "claude_code_demo"
path = "examples/claude_code_demo.rs"

[[example]]
name = "monitoring_demo"
path = "examples/monitoring_demo.rs"

[[example]]
name = "session_persistent_demo"
path = "examples/session_persistent_demo.rs"

[[example]]
name = "todo_app_builder"
path = "examples/todo_app_builder.rs"

[[example]]
name = "llm_quality_judge_demo"
path = "examples/llm_quality_judge_demo.rs"

[features]
default = ["urlencoding"]
container = ["bollard", "futures-util", "tar", "urlencoding"]