[package]
name = "ai-session"
version = "0.3.4"
edition = "2021"
authors = ["ccswarm contributors"]
description = "AI-optimized terminal session management library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nwiizo/ccswarm"
keywords = ["terminal", "session", "ai", "pty", "tmux-alternative"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# PTY and process management
portable-pty = "0.8"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Data structures
dashmap = "6.0"
bytes = "1.7"
ringbuf = "0.3"

# Compression and storage
zstd = "0.13"
lz4 = "1.24"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# IPC and communication
crossbeam-channel = "0.5"
ipc-channel = { version = "0.18", features = ["async"] }

# File system
notify = "6.1"
tempfile = "3.10"

# Pattern matching and parsing
regex = "1.10"
once_cell = "1.19"

# HTTP client for remote commands
reqwest = { version = "0.12", features = ["json"], optional = true }

# HTTP server support
axum = { version = "0.7", features = ["json"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# CLI utilities (for examples and testing)
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.28", optional = true }
dirs = { version = "5.0", optional = true }

# Testing utilities
mockall = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
criterion = "0.5"
tempfile = "3.10"

[features]
default = ["cli"]
cli = ["clap", "crossterm", "reqwest", "dirs"]
server = ["axum", "tower", "tower-http", "clap"]
testing = ["mockall"]

[[bin]]
name = "ai-session"
required-features = ["cli"]

[[bin]]
name = "ai-session-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[example]]
name = "basic_session"
required-features = ["cli"]

[[example]]
name = "multi_agent"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = true