[package]
name = "ccswarm"
version = "0.3.1"
edition = "2021"
authors = ["nwiizo"]
description = "AI Multi-Agent Orchestration System"
license = "MIT"
repository = "https://github.com/nwiizo/ccswarm"

[dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# AI Session integration
ai-session = { path = "../ai-session" }

# Configuration
config = "0.14"
directories = "5.0"

# Process management
nix = { version = "0.30", features = ["process", "signal"] }

# Git operations
git2 = "0.19"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
futures = "0.3"
async-trait = "0.1"

# Pattern matching
glob = "0.3"
regex = "1.11"

# Random
rand = "0.9"

# Testing
mockall = "0.13"
tempfile = "3.20"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[[bin]]
name = "ccswarm"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
integration-tests = []