[package]
name = "ai-session"
version = "0.3.6"
edition = "2021"
authors = ["ccswarm contributors"]
description = "AI-optimized terminal session management library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nwiizo/ccswarm"
keywords = ["terminal", "session", "ai", "pty", "tmux-alternative"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core async runtime - minimal features for library
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
    "io-std",
    "process",
    "signal",
    "fs",
    "net",
] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# PTY and process management
portable-pty = "0.8"
nix = { version = "0.30", features = ["term", "process", "signal", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
dashmap = "6.0"

# Compression
zstd = "0.13"
base64 = "0.22"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Inter-agent communication
crossbeam-channel = "0.5"

# File system
tempfile = "3.10"

# Pattern matching
regex = "1.10"
once_cell = "1.19"

# Logging (used in core modules)
log = "0.4"

# Directory paths (used in session_cache, session_persistence)
dirs = "5.0"

# Optional: HTTP client for MCP
reqwest = { version = "0.12", features = ["json"], optional = true }

# Optional: WebSocket for MCP transport
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }

# Optional: HTTP server
axum = { version = "0.7", features = ["json"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# Optional: CLI utilities
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = []
cli = ["clap", "crossterm", "reqwest"]
server = ["axum", "tower", "tower-http", "clap"]
mcp = ["reqwest", "tokio-tungstenite", "futures-util"]

[[bin]]
name = "ai-session"
required-features = ["cli"]

[[bin]]
name = "ai-session-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[example]]
name = "mcp_server_test"
required-features = ["mcp"]

[[example]]
name = "basic_session"
required-features = ["cli"]

[[example]]
name = "multi_agent"
required-features = ["cli"]

