[package]
name = "ccswarm"
version = "0.4.3"
edition.workspace = true
authors.workspace = true
description = "AI-powered multi-agent orchestration system with proactive intelligence, security monitoring, and session management"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/nwiizo/ccswarm"
homepage = "https://github.com/nwiizo/ccswarm"
keywords = ["ai", "claude", "agents", "orchestration", "automation"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ccswarm"
path = "src/main.rs"

# [[example]]
# name = "search_agent_sangha_demo"
# path = "examples/search_agent_sangha_demo.rs"

[[example]]
name = "backend_status_demo"
path = "examples/backend_status_demo.rs"

[dependencies]
# Async runtime - minimal features for reduced binary size
tokio = { version = "1.40", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "macros",           # #[tokio::main], #[tokio::test]
    "sync",             # Channels, RwLock, Mutex
    "time",             # Sleep, intervals, timeouts
    "io-util",          # AsyncRead/AsyncWrite utilities
    "process",          # Process spawning for agents
    "fs",               # File system operations
] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Macro utilities
paste = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system
walkdir = "2.5"

# Regular expressions
regex = "1.10"


# Process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process"] }

# Configuration
config = "0.15"

# Async channels
async-channel = "2.3"

# Crossbeam channels for ai-session integration
crossbeam-channel = "0.5"

# State management
dashmap = "6.1"

# TUI
ratatui = "0.29"
crossterm = "0.29"
tokio-util = "0.7"

# HTTP client for API providers
reqwest = { version = "0.12", features = ["json"] }

# Testing utilities
tempfile = "3.8"

# Async traits
async-trait = "0.1"

# Async utilities
futures = "0.3"

# Logging bridge for legacy code
log = "0.4"

# Docker integration (optional for container feature)
bollard = { version = "0.19", optional = true }
futures-util = { version = "0.3", optional = true }
tar = { version = "0.4", optional = true }

# URL encoding
urlencoding = { version = "2.1", optional = true }

# Additional utilities
colored = "3.0"
rand = "0.9"

# System information for resource monitoring
sysinfo = "0.33"

# Secure secret handling (zeroize feature for memory safety)
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1.8"

# AI Session Management - core session management library
ai-session = { version = "0.4.3", path = "../ai-session" }

# Directory paths
dirs = "5.0"

[dev-dependencies]
# Testing
mockall = "0.13"
tempfile = "3.12"
pretty_assertions = "1.4"

[features]
default = []
# Container feature for Docker integration (optional)
container = ["bollard", "futures-util", "tar", "urlencoding"]